# debloat-ai

./: .env.example  .gitattributes  .gitignore  AI_ADVISOR_QUICK_START.md  ARCHITECTURE.md  CHANGELOG.md  CHATBOT_ENHANCEMENTS.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  PROJECT_READINESS_ANALYSIS.md  README.md  REFACTORING_SUMMARY.md  RELEASING.md  TOAST_QUICK_REFERENCE.md  UTILITY_REFERENCE.md  package-lock.json  package.json  tauri.conf.json  vite.config.ts
.jules/: bolt.md
backend-python/: README.md  adb_operations.py  ai_advisor.py  api_types.py  backend.spec  backup_manager.py  main.py  openclaw_integration.py  requirements.txt  test_backend.py  test_openclaw.py
backend/tauri/: Cargo.toml  tauri.conf.json
backend/tauri/src/: adb.rs  ai_advisor.rs  backup.rs  chatbot.rs  commands.rs  lib.rs  main.rs  package_stream.rs  system_health.rs
docs/: ACTION_MODE_IMPLEMENTATION.md  ACTION_MODE_SAFETY.md  ACTION_MODE_VISUAL_GUIDE.md  ADB_SETUP_GUIDE.md  APP_INTEGRATION_GUIDE.md  ARCHITECTURE.md  COMPONENT_REFERENCE.md  DARKMODE_HOOK.md  FEATURE_REFERENCE.md  INSTALL.md  OPENCLAW_INTEGRATION.md  PACKAGE_DATABASE.md  PROJECT_STRUCTURE.md  QUICK_START_OPENCLAW.md  RELEASING.md  SETTINGS_DOCUMENTATION.md  TAURI_SETUP.md  TOAST_DOCUMENTATION.md
electron/: main.js  preload.js
frontend/: STRUCTURE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
icons/: icon.icns
openclaw-skill/: debloat-controller.py
scripts/: build-backend.js  build-release.js
src/: ConfirmDialog.tsx  ConfirmDialogExamples.tsx  DevicePanel.tsx  PackageList.tsx  SettingsExample.tsx  ThemeSelector.tsx  Toast.tsx  UninstallDialog.tsx  (+5 more)
src-tauri/: ADB_MODULE_DOCUMENTATION.md  ADB_QUICK_REFERENCE.md  Cargo.toml  tauri.conf.json
(+63 files in other folders)
