[package]
name = "debloat-ai"
version = "0.1.0"
description = "Debloat AI - Remove bloatware safely from Android devices"
authors = ["Abhishek"]
license = "MIT"
repository = "https://github.com/abhishek112007/debloat-ai"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.19"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
lazy_static = "1.4"

[[bin]]
name = "debloat-ai"
path = "backend/tauri/src/main.rs"

[features]
custom-protocol = ["tauri/custom-protocol"]

[workspace]
members = []
